# Data-Structures-Lab2

./: CMakeLists.txt
ex_n/: ex_1.txt
src/: main.c
src/Unknown_sort/: Unknown_sort.c  Unknown_sort.h
src/array/: array.c  array.h
src/console/: console.c  console.h
src/insertion_sort/: insertion_sort.c  insertion_sort.h
src/list/: list.c  list.h
src/load_files/: test_load_file.c
src/radix_sort/: radix_sort.c  radix_sort.h
src/tests/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c
txts/: ex_1.txt  ex_2.txt  ex_3.txt  ex_4.txt  ex_5.txt
